--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -13,7 +13,10 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarCollapse">
-      <ul class="navbar-nav me-auto mb-2 mb-md-0" *ngIf="isLoggedIn">
+      <ul
+        class="navbar-nav me-auto mb-2 mb-md-0"
+        *ngIf="accountService.currentUser$ | async"
+      >
         <li class="nav-item">
           <a class="nav-link" aria-current="page" href="#">Matches</a>
         </li>
@@ -25,7 +28,11 @@
         </li>
       </ul>
 
-      <div class="dropdown" dropdown *ngIf="isLoggedIn">
+      <div
+        class="dropdown"
+        dropdown
+        *ngIf="accountService.currentUser$ | async"
+      >
         <a class="dropdown-toggle text-light" dropdownToggle>Welcome User</a>
         <div class="dropdown-menu mt-2" *dropdownMenu>
           <a class="dropdown-item">Edit Profile</a>
@@ -35,7 +42,7 @@
       </div>
 
       <form
-        *ngIf="!isLoggedIn"
+        *ngIf="!(accountService.currentUser$ | async)"
         #loginForm="ngForm"
         class="d-flex ml-auto"
         (ngSubmit)="login()"
