--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,5 @@
 <app-nav></app-nav>
 
 <div class="container" style="margin-top: 96px">
-  <ul>
-    <li *ngFor="let user of users">
-      {{ user.userName }}
-    </li>
-  </ul>
+  <app-home></app-home>
 </div>
