--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -33,7 +33,9 @@
         dropdown
         *ngIf="accountService.currentUser$ | async"
       >
-        <a class="dropdown-toggle text-light" dropdownToggle>Welcome User</a>
+        <a class="dropdown-toggle text-light" dropdownToggle
+          >Welcome {{ model.username }}</a
+        >
         <div class="dropdown-menu mt-2" *dropdownMenu>
           <a class="dropdown-item">Edit Profile</a>
           <div class="dropdown-divider"></div>
