--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+<nav class="navbar navbar-expand-md navbar-light fixed-top bg-light">
   <div class="container">
     <a class="navbar-brand" routerLink="/">Dating App</a>
     <button
@@ -41,10 +41,10 @@
       <div
         class="dropdown"
         dropdown
-        *ngIf="accountService.currentUser$ | async"
+        *ngIf="accountService.currentUser$ | async as user"
       >
-        <a class="dropdown-toggle text-light" dropdownToggle
-          >Welcome {{ model.username }}</a
+        <a class="dropdown-toggle text-dark" dropdownToggle
+          >Welcome {{ user.userName }}</a
         >
         <div class="dropdown-menu mt-2" *dropdownMenu>
           <a class="dropdown-item">Edit Profile</a>
@@ -75,7 +75,7 @@
           type="password"
           placeholder="Password"
         />
-        <button class="btn btn-outline-success" type="submit">Login</button>
+        <button class="btn btn-info" type="submit">Login</button>
       </form>
     </div>
   </div>
