--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,6 +1,6 @@
 <form #registerForm="ngForm" (ngSubmit)="register()" autocomplete="off">
   <h2 class="text-center text-primary">Sign Up</h2>
-  <div class="form-group">
+  <div class="form-group mt-3">
     <input
       type="text"
       class="form-control"
@@ -17,8 +17,8 @@
     />
   </div>
   <div class="form-group text-center my-3">
-    <button class="btn btn-success" type="submit">Register</button>
-    <button class="btn btn-default mx-2" type="button" (click)="cancel()">
+    <button class="btn btn-primary" type="submit">Register</button>
+    <button class="btn btn-secondary mx-2" type="button" (click)="cancel()">
       Cancel
     </button>
   </div>
